# ofs

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/sdl2/: FindSDL2.cmake
shaders/: line.fs  planet.fs  planet.vs  point.fs  point.vs  text.fs  text.vs
src/: CMakeLists.txt
src/api/: celbody.h  draw.h  elevmgr.h  graphics.h  handle.h  logger.h  module.h  ofsapi.h  vehicle.h
src/client/glclient/: CMakeLists.txt  buffer.cpp  buffer.h  camera.cpp  camera.h  client.cpp  client.h  constellations.cpp  elevmgr.cpp  elevmgr.h  fonts.cpp  fonts.h  glad.cpp  glclient.cpp  glclient.h  lights.cpp  lights.h  loader.cpp  mesh.cpp  mesh.h  overlay.cpp  overlay.h  renderer.cpp  renderer.h  ringmgr.cpp  ringmgr.h  scene.cpp  scene.h  shader.cpp  shader.h  skpad.cpp  skpad.h  starcolors.cpp  starcolors.h  stars.cpp  stars.h  surface.cpp  surface.h  systems.cpp  texmgr.cpp  (+14 more)
src/client/glclient/glad/: gl.h
src/client/glclient/shaders/: atmo.glsl  body.fs  body.vs  body.vs.glsl  corona.fs  corona.vs  line.fs  line.vs  logdepth.h  normals.fs.glsl  normals.gs.glsl  normals.vs.glsl  point.fs  star-surface.fs  star-surface.vs  star.fs  star.fs.glsl  star.vs  star.vs.glsl  star_surface.frag.glsl  stars-point.vs.glsl
src/client/glclient/shaders/lib/: logdepth.glsl
src/client/vkclient/: CMakeLists.txt  client.cpp  client.h
src/control/: gpanel.cpp  gpanel.h  hudpanel.cpp  hudpanel.h  info.cpp  mfdpanel.cpp  mfdpanel.h  panel.cpp  panel.h  ppanel.cpp  ppanel.h  taskbar.cpp  taskbar.h
src/control/hud/: panel.cpp  panel.h
src/control/mfd/: orbit.cpp  orbit.h  panel.cpp  panel.h  surface.cpp  surface.h
src/data/scen/: player.json  start.hjson  start.json  start.yaml
src/engine/: base.cpp  base.h  camera.cpp  camera.h  celestial.cpp  celestial.h  dlgcam.cpp  dlgcam.h  engine.cpp  engine.h  frame.cpp  frame.h  headup.cpp  mesh.cpp  mesh.h  mfdpanel.cpp  mfdpanel.h  navigation.cpp  navigation.h  object.cpp  object.h  observer.cpp  observer.h  panel.cpp  panel.h  player-old.h  player.cpp  player.h  radio.cpp  radio.h  rigidbody.cpp  rigidbody.h  supervehicle.cpp  supervehicle.h  supervessel.cpp  supervessel.h  vehicle.cpp  vehicle.h  vessel.cpp  vessel.h  (+2 more)
src/engine/vehicle/: animation.cpp  config.cpp  mesh.cpp  module.cpp  svehicle.cpp  svehicle.h  thruster.cpp  vehicle.cpp  vehicle.h  wingctrl.cpp
src/ephem/: atomsphere.h  earth-p03lp.cpp  elements-old.cpp  elements-old.h  elements.cpp  elements.h  elp-mpp02.cpp  elp-mpp02.h  ephemeris.cpp  ephemeris.h  iau-wgccre.cpp  orbit.cpp  orbit.h  rotation.cpp  rotation.h  spice.cpp  spice.h  vsop87.cpp  vsop87.h  vsop87a.cpp  vsop87a.h  vsop87ear.cpp  vsop87jup.cpp  vsop87mar.cpp  vsop87mer.cpp  vsop87nep.cpp  vsop87old.h  vsop87sat.cpp  vsop87ura.cpp  vsop87ven.cpp
src/ephem/earth/: atmo.cpp  atmo.h  earth.cpp  earth.h  nrlmsise00.cpp  nrlmsise00_math.cpp  nrlmsise00_p.cpp
src/ephem/lunar/: elp82.cpp  elp82.h  lunar.cpp  lunar.h
src/ephem/mars/: atmo.cpp
src/ephem/moon/: elp82.cpp  elp82.h  moon.cpp
src/ephem/sol/: CMakeLists.txt  system.hjson  system.json  system.yaml
src/ephem/sol/earth/: atmo.cpp  atmo.h  cbody.json  earth.yaml  nrlmsise00.cpp  nrlmsise00_math.cpp  nrlmsise00_p.cpp
src/ephem/sol/jupiter/: cbody.json  jupiter.yaml
src/ephem/sol/luna/: cbody.json  elp82.cpp  elp82.h  elp82dat.cpp  luna.cpp  luna.yaml
src/ephem/sol/lunar/: elp82.cpp  lunar.cpp  lunar.yaml
src/ephem/sol/mars/: atmo.cpp  atmo.h  cbody.json  mars.yaml
src/ephem/sol/mercury/: cbody.json  mercury.yaml
src/ephem/sol/neptune/: cbody.json  neptune.yaml
src/ephem/sol/saturn/: cbody.json  saturn.yaml
src/ephem/sol/sol/: cbody.json
src/ephem/sol/sun/: sun.yaml
src/ephem/sol/uranus/: cbody.json  uranus.yaml
src/ephem/sol/venus/: atmo.cpp  cbody.json  venus.yaml
src/ephem/venus/: atmo.cpp  atmo.h
src/ephem/vsop87/: earth.cpp  earth.h  jupiter.cpp  jupiter.h  mars.cpp  mars.h  mercury.cpp  mercury.h  neptune.cpp  neptune.h  saturn.cpp  saturn.h  sol.cpp  sol.h  uranus.cpp  uranus.h  venus.cpp  venus.h  vsop87.cpp  vsop87.h  vsop87ear.cpp  vsop87jup.cpp  vsop87mar.cpp  vsop87mer.cpp  vsop87nep.cpp  vsop87sat.cpp  vsop87sun.cpp  vsop87ura.cpp  vsop87ven.cpp
src/imgui/: imconfig.h  imgui.cpp
src/main/: app.cpp  app.h  core.h  date.cpp  date.h  debug.h  graphics.cpp  guimgr.cpp  guimgr.h  json.h  keymap.cpp  keymap.h  keys.h  main.cpp  math.h  module.cpp  ofsapi.cpp  timedate.cpp  timedate.h
src/main/sdl/: app.cpp  app.h  maingl.cpp
src/osd/gl/: buffers.cpp  buffers.h  context.cpp  context.h  dds.h  lights.h  mesh.cpp  mesh.h  shader.cpp  shader.h  texture.cpp  texture.h
src/render/: annotation.cpp  elevation.cpp  elevation.h  elevmgr.cpp  elevmgr.h  hudpanel.cpp  hudpanel.h  lights.cpp  loader.cpp  mesh.cpp  mesh.h  overlay.cpp  overlay.h  planetgrid.cpp  planetgrid.h  refmark.cpp  refmark.h  scene.cpp  scene.h  starcolors.cpp  starcolors.h  surface.cpp  surface.h  systems.cpp  vbody.cpp  vbody.h  vobject.cpp  vobject.h  vstar.cpp  vstar.h  vvessel.cpp  vvessel.h  ztreemgr.cpp  ztreemgr.h
src/render/gl/: constellations.cpp  fonts.cpp  fonts.h  stars.cpp  stars.h
src/scripts/: parser.cpp  parser.h
src/tools/elp82b/: elp82b.cpp
src/tools/stardb/: CMakeLists.txt  buildstars.cpp
src/tools/txedit/: CMakelists.txt  main.cpp
src/tools/txpack/: CMakeLists.txt  CMakelists.txt  txpack.cpp
src/tools/vsop/: CMakeLists.txt
src/tools/vsop87/: CMakeLists.txt  vsop87.cpp
src/universe/: astro.cpp  astro.h  atmo.cpp  atmo.h  body.cpp  body.h  celbody.cpp  celbody.h  constellations.cpp  constellations.h  elevmgr.cpp  elevmgr.h  frame.cpp  frame.h  handle.h  psystem.cpp  psystem.h  star.cpp  star.h  starlib.cpp  starlib.h  startree.cpp  startree.h  surface.cpp  surface.h  surfmgr.cpp  surfmgr.h  system.cpp  system.h  universe.cpp  universe.h  xhipdata.h
src/utils/: color.cpp  color.h  json.cpp  json.h  logger.cpp  logger.h  string.cpp  string.h  tree.h  yaml.h  ztreemgr.cpp  ztreemgr.h
src/vehicles/glider/: CMakeLists.txt  glider.cpp  glider.h  module.cpp
src/vehicles/sp1/: module.cpp  module.h
